--- a/DATA/DATA.csproj
+++ b/DATA/DATA.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Data.SqlClient, Version=4.6.1.3, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SqlClient.4.8.3\lib\net461\System.Data.SqlClient.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,13 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CLADATOS\DATOAGENDA.cs" />
-    <Compile Include="CLADATOS\DATOSCLIENTE.cs" />
-    <Compile Include="CLADATOS\DATOSDETALLE.cs" />
-    <Compile Include="CLADATOS\DATOSFACTURA.cs" />
-    <Compile Include="CLADATOS\DATOSPRODUICTOS.cs" />
-    <Compile Include="CLADATOS\DATOSUSER.cs" />
+    <Compile Include="LIBRARY\CheckSession.cs" />
+    <Compile Include="LIBRARY\CLADATOS\DATOAGENDA.cs" />
+    <Compile Include="LIBRARY\CLADATOS\DATOSCLIENTE.cs" />
+    <Compile Include="LIBRARY\CLADATOS\DATOSDETALLE.cs" />
+    <Compile Include="LIBRARY\CLADATOS\DATOSFACTURA.cs" />
+    <Compile Include="LIBRARY\CLADATOS\DATOSPRODUICTOS.cs" />
+    <Compile Include="LIBRARY\CLADATOS\DATOSUSER.cs" />
     <Compile Include="CONNETION.cs" />
+    <Compile Include="LIBRARY\CRUD.cs" />
+    <Compile Include="LIBRARY\INTERCONNETION.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
