--- a/DATA/DATA.csproj
+++ b/DATA/DATA.csproj
@@ -53,6 +53,7 @@
     <Compile Include="LIBRARY\CLADATOS\DATOSPRODUICTOS.cs" />
     <Compile Include="LIBRARY\CLADATOS\DATOSUSER.cs" />
     <Compile Include="CONNETION.cs" />
+    <Compile Include="LIBRARY\ClassSearch.cs" />
     <Compile Include="LIBRARY\CRUD.cs" />
     <Compile Include="LIBRARY\INTERCONNETION.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
