--- a/Lógica/LOGIC.csproj
+++ b/Lógica/LOGIC.csproj
@@ -54,6 +54,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LIBRARY\ClassBill.cs" />
+    <Compile Include="LIBRARY\ClassWareHouse.cs" />
     <Compile Include="LIBRARY\Report.cs" />
     <Compile Include="LOGICA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
