--- a/Lógica/LOGIC.csproj
+++ b/Lógica/LOGIC.csproj
@@ -59,6 +59,7 @@
     <Compile Include="LIBRARY\ClassBill.cs" />
     <Compile Include="LIBRARY\ClassClient.cs" />
     <Compile Include="LIBRARY\ClassWareHouse.cs" />
+    <Compile Include="LIBRARY\ManagerBill.cs" />
     <Compile Include="LIBRARY\Report.cs" />
     <Compile Include="LOGICA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
