Trabajo de 30 de marzo
Mejoras de código

--- a/Lógica/LOGIC.csproj
+++ b/Lógica/LOGIC.csproj
@@ -55,12 +55,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LIBRARY\BillAdmincs.cs" />
-    <Compile Include="LIBRARY\ClassAgenda.cs" />
+    <None Include="LIBRARY\Schedule" />
     <Compile Include="LIBRARY\ClassBill.cs" />
     <Compile Include="LIBRARY\ClassClient.cs" />
     <Compile Include="LIBRARY\ClassWareHouse.cs" />
     <Compile Include="LIBRARY\ManagerBill.cs" />
     <Compile Include="LIBRARY\Report.cs" />
+    <Compile Include="LIBRARY\Schedule.cs" />
     <Compile Include="LOGICA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
